Bugzilla #52416: Suppress unnecessary "font not found warnings" when generating AFP with raster fonts Submitted by: Luis Bernardo
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@1233393 13f79535-47bb-0310-9956-ffa450edef68